<resources>
    //menu
    <string name="app_name">!Cuarentena Ya!</string>
    <string name="BotonComida">Comida</string>
    <string name="BotonMedicina">Medicina</string>
    <string name="BotonMascotas">Mascotas</string>
    <string name="BotonLimpieza">Limpieza</string>
    <string name="BotonMedicos">Medicos</string>
    <string name="BotonTecnicos">Tecnicos</string>
    <string name="BotonVeterinario">Veterinario</string>
    <string name="BotonCarrito">.</string>
    <string name="TextoProductos">Productos</string>
    <string name="TexvoServicio">Servicios</string>
    <string name="title_activity_login">Iniciar Sesion</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    //logIn
    <string name="BotonIngresar">Ingresar</string>
    <string name="TitutoInicoSesion">!Cuarentena Ya!</string>
    <string name="IngresaTuNombre">Ingresa Tu Nombre</string>
    <string name="IngresaTuCelular">Ingresa Tu Celular</string>
    <string name="IngresaTuDireccion">Ingresa Tu Dirección</string>
    <string name="LogoProvisonal">Logo Provisional</string>
    <string name="Registrese">Complete Su información</string>
    <string name="SloganLogIn">"''Stay in your house, means stay safe''"</string>

    //inicio
    <string name="InicioIngresar">ingresar</string>

    //doctores
    <string name="TXT_Sintomas">"A continuación describa sus síntomas:"</string>
    <string name="Escribir_aqui">"Escriba aqui..."</string>
    <string name="SeleccioneEspecialidad">"A continuación seleccione el especialista:"</string>
    <string name="TextoDoctore">"Médicos"</string>
    <string name="botonEnviar">"Enviar"</string>

    //tecnicos
    <string name="TextoTecnicos">"Técnicos"</string>
    <string name="TextoProblema">"A continuación describa el problema que tiene:"</string>
    <string name="InTecnicos">""</string>
    <string name="txt_queTecnico">"Especifique el técnico que requiere:"</string>
    <string name="DescripcionLogoTecnicos">""</string>
    <string name="mensaje_no_enviar">"Por favor llene todos los campos solicitados"</string>


    //animales
    <string name="txt_veterinaria">"Veterinaria"</string>
    <string name="txt_queanimaltiene">"Seleccione el animal que tiene:"</string>
    <string name="logoPerro">""</string>
    <string name="logoGato">""</string>
    <string name="logoHamster">""</string>
    <string name="txtPerro">"Perro"</string>
    <string name="txtGato">"Gato"</string>
    <string name="txtHamster">"Hamster"</string>
    <string name="CheckBox_OtroVeterinario">"Otro (Especifique)"</string>
    <string name="in_otroVeterinario">" "</string>
    <string name="txtComidaAnimales">"Comida para Perros"</string>
    <string name="txtComidaAnimales2">"Comida para Gatos"</string>
    <string name="txtComidaAnimales3">"Otros"</string>
    <string name="txtComidaAnimales0">"Comida para Mascotas"</string>
    <string name="BotonListoVeterinaria">"Listo!"</string>


    //TiposComida
    <string name="txt_LechesDerivados">"Leche y Derivados"</string>
    <string name="txt_CarnePescadoHuevo">"Carnes, Pesados y Huevo"</string>
    <string name="txt_PatatasLegumbresFrutosSecos">"Patatas, Legumbres y Frutos Secos"</string>
    <string name="txt_VerdurasHortalizas">"Verduras y Hortalizas"</string>
    <string name="txt_Frutas">"Frutas"</string>
    <string name="txt_CerealesDerivados">"Cereales y Derivados"</string>
    <string name="txt_Bebidas">"Bebidas"</string>

    //Leche y Derivados Activity
    <string name="txt_TituloLeche">"Leche y Derivados"</string>
    <string name="txt_SubTituloLeche">"Seleccione Los Productos Que Desee"</string>


    //carrito
    <string name="txt_carrito">"Carrito"</string>
    <string name="boton_finalizar_compra">"Finalizar Compra"</string>


</resources>


