<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#C50000"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/BotonComida"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginEnd="31dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/fondodoc"
        android:backgroundTint="#DCBC5B"
        android:text="@string/BotonComida"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/BotonMedicina"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Productos_txt" />

    <Button
        android:id="@+id/BotonMedicina"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="52dp"
        android:background="#FFFFFF"
        android:backgroundTint="#DCBC5B"
        android:text="@string/BotonMedicina"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Productos_txt" />

    <Button
        android:id="@+id/BotonMascotas"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginEnd="31dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="35dp"
        android:background="#FFFFFF"
        android:backgroundTint="#DCBC5B"
        android:text="@string/BotonMascotas"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/BotonLimpieza"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BotonComida" />

    <Button
        android:id="@+id/BotonLimpieza"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="35dp"
        android:background="#FFFFFF"
        android:backgroundTint="#DCBC5B"
        android:text="@string/BotonLimpieza"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BotonMedicina" />

    <Button
        android:id="@+id/BotonMedicos"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginEnd="31dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="35dp"
        android:background="#CACACA"
        android:backgroundTint="#668E68"
        android:onClick="ingresarDoc"
        android:text="@string/BotonMedicos"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/BotonTecnicos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Servicos_txt" />

    <Button
        android:id="@+id/Veterinario"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginTop="120dp"
        android:background="#DDDDDD"
        android:backgroundTint="#668E68"
        android:text="@string/BotonVeterinario"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Servicos_txt" />

    <Button
        android:id="@+id/BotonTecnicos"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="60dp"
        android:background="#FBFBFB"
        android:backgroundTint="#668E68"
        android:onClick="ingresoTec"
        android:text="@string/BotonTecnicos"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Servicos_txt" />

    <ImageView
        android:id="@+id/BotonCarrito"
        android:layout_width="64dp"
        android:layout_height="53dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#668E68"
        android:contentDescription="@string/BotonCarrito"
        app:layout_constraintBottom_toTopOf="@+id/Productos_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/shopping_cart_icon_shopping_cart_png" />

    <TextView
        android:id="@+id/Productos_txt"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="#668E68"
        android:fontFamily="sans-serif-black"
        android:text="@string/TextoProductos"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#040404"
        android:textSize="30sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Productos"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/Servicos_txt"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="230dp"
        android:backgroundTint="#668E68"
        android:text="@string/TexvoServicio"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Productos_txt" />
</androidx.constraintlayout.widget.ConstraintLayout>