<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondo_veterinaria"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSemiTransluscentFondo">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_veterinaria"
            android:textSize="@dimen/tamanio_letra_titulo"
            android:background="@color/accentServicios"
            android:textColor="@color/colorBlanco"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="@dimen/padding_titulo"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_queanimaltiene"
                android:textColor="@color/colorNegro"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="start"
                android:layout_margin="10dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp">
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtPerro"
                        android:textSize="20sp"
                        android:background="@drawable/background_sintomas"
                        android:layout_margin="20dp"
                        android:padding="5dp"
                        android:gravity="center"/>

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtGato"
                        android:textSize="20sp"
                        android:background="@drawable/background_sintomas"
                        android:layout_margin="20dp"
                        android:padding="5dp"
                        android:gravity="center"/>

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtHamster"
                        android:textSize="20sp"
                        android:background="@drawable/background_sintomas"
                        android:layout_margin="20dp"
                        android:padding="5dp"
                        android:gravity="center"/>

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/CheckBox_OtroVeterinario"
                        android:textSize="20sp"
                        android:background="@drawable/background_sintomas"
                        android:layout_margin="20dp"
                        android:padding="5dp"
                        android:gravity="center"/>

                </RadioGroup>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_margin="20dp">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="50dp"
                        android:src="@drawable/perrito"
                        android:layout_margin="15dp"/>

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="50dp"
                        android:src="@drawable/gatito"
                        android:layout_margin="15dp"/>

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="50dp"
                        android:src="@drawable/hamsercito"
                        android:layout_margin="15dp"/>


                </LinearLayout>


            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Escribir_aqui"
                android:inputType="text"
                android:layout_marginBottom="20dp"
                android:gravity="start"
                android:background="@drawable/background_sintomas"
                android:padding="10dp"/>



                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/botonEnviar"
                    android:background="@drawable/boton_background"
                    android:textSize="20sp"
                    android:padding="15dp"
                    android:textColor="@color/colorBlanco"
                    android:textStyle="bold"
                    android:layout_margin="50dp"/>


        </LinearLayout>


    </LinearLayout>
</FrameLayout>