<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TecnicosActivity">

    <LinearLayout

        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        android:background="@drawable/bg_tecnicos2"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">


        <TextView
            android:id="@+id/txt_tecnicos"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#D01430C6"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/TextoTecnicos"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="410dp"
            android:layout_height="250dp"
            android:padding="30dp"
            app:srcCompat="@drawable/herramientas" />

        <TextView
            android:id="@+id/txt_ProblemaTec"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#FFFFFF"
            android:text="@string/TextoProblema"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp"
            app:drawableTint="#000000" />

        <TextView
            android:id="@+id/in_QueProblemTecnico"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="#DA8E95C1"
            android:text="@string/InTecnicos" />

        <TextView
            android:id="@+id/txt_CualTecnico"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt_queTecnico"
            android:textAlignment="center"
            android:background="#FFFFFF"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/in_QueTecnico"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="#DA8E95C1"
            android:text="@string/InTecnicos" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>