<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_doctores"
    android:padding="20dp"
    tools:context=".acivityDoctores">

    <TextView
        android:id="@+id/EspecialistaDoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="monospace"
        android:text="@string/SeleccioneEspecialidad"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DescripcionSintomas" />

    <TextView
        android:id="@+id/txt_SintomasDoc"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="serif"
        android:text="@string/TXT_Sintomas"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Doctores" />

    <TextView
        android:id="@+id/DescripcionSintomas"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="#BE95A5CF"
        android:text="@string/DescrippcionSintomas"
        app:layout_constraintTop_toBottomOf="@+id/txt_SintomasDoc"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/txt_Doctores"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="#B7AAD875"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/TextoDoctore"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="128dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EspecialistaDoc" />

</androidx.constraintlayout.widget.ConstraintLayout>